--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "vue": "^3.4.29"
   },
   "devDependencies": {
