--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "vue": "^3.4.29"
+    "swiper": "^11.1.14",
+    "vue": "^3.4.29",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
